Fixed all non-zero to nonzeros

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -343,7 +343,7 @@ ViennaCL supports a number of sparse formats similar to \cite{Bell2009,Cusp2012}
 \begin{figure}
 \centering
 \includegraphics[width=0.9\textwidth]{gpu_content/omnigraffle/SparseStorage.pdf}
-\caption{Sparse format example demonstrating a sparse matrix and corresponding storage data structures. ELL format assumes two non-zeros per row. }
+\caption{Sparse format example demonstrating a sparse matrix and corresponding storage data structures. ELL format assumes two nonzeros per row. }
 \label{fig:sparse_format}
 \end{figure}
 
