--- a/latex/ordering_and_preconditioning.tex
+++ b/latex/ordering_and_preconditioning.tex
@@ -558,7 +558,7 @@ One measure of nonzeros density is the \emph{bandwidth} of a matrix, $A$, define
 \begin{align*}
 bw(A) = \max\{|i - j| + 1 : A_{i,j} \neq 0\}.
 \end{align*}
-The bandwidth simply counts the number of super- and sub-diagonals---i.e., diagonals above and below the main diagonal---that contain at least one non-zero. Incrementing by one accounts for a non-zero main diagonal. The lower the bandwidth, the better. 
+The bandwidth simply counts the number of super- and sub-diagonals---i.e., diagonals above and below the main diagonal---that contain at least one nonzero. Incrementing by one accounts for a nonzero main diagonal. The lower the bandwidth, the better. 
 
 For any matrix, $A$, a permutation, $P$, can be constructed such that 
 \begin{align*}
@@ -609,7 +609,7 @@ the $k$-D Tree and fixed-grid stencils. Visualization and bandwidth calculation 
 Bit interleaving occurs in a MATLAB script that leverages the internal \emph{bitshift}, \emph{bitand}, \emph{bitor}, and \emph{bitxor} routines. Bitwise operators in MATLAB are restricted to 32-bits, but the maximum number of cells per dimension allowed by 32-bits ($\leq 1023$ in $3$-D) is more than sufficient. The MATLAB internal \emph{symrcm} computes the Reverse Cuthill-McKee reordering. % based on the output from the raster-order (IJK) stencil generation. 
 Since the number of nonzeros per row is constant, RCM selects a different starting node based on the input ordering of nodes; this allows for some variance in the bandwidth due to random selection of nodes in tie-breaking. For consistency, results shown here apply RCM to the output of a raster-ordered fixed-grid query. 
 
-Figure~\ref{fig:ordering_impact_rg} illustrates six sparsity patterns resulting from the curves in Figure~\ref{fig:orderings}. The test case is a regular grid of $N=18^3$ nodes, each with stencil size $n=31$. From left to right, the top row shows raster-ordering, Reverse Cuthill-McKee, and the 4-node Z order. The second row shows $X$-, $Z$-, and $U$-orders generated with bit-interleaving. The fixed-grid resolution in each dimension of this small test case is $h_n = 6$ (i.e., $6^3$ cells total for 27 nodes per cell). Bandwidth, $bw$, is included in the bottom label for each matrix, as well as the number of nonzeros, $nz$. Of all the orderings in Figure~\ref{fig:ordering_impact_rg}, RCM is by far the smallest bandwidth ($bw=858$). The runner up, with a 30\% wider bandwidth, is raster-ordering.  The four remaining options are aesthetically pleasing, but their non-zero distributions have significantly less structure. 
+Figure~\ref{fig:ordering_impact_rg} illustrates six sparsity patterns resulting from the curves in Figure~\ref{fig:orderings}. The test case is a regular grid of $N=18^3$ nodes, each with stencil size $n=31$. From left to right, the top row shows raster-ordering, Reverse Cuthill-McKee, and the 4-node Z order. The second row shows $X$-, $Z$-, and $U$-orders generated with bit-interleaving. The fixed-grid resolution in each dimension of this small test case is $h_n = 6$ (i.e., $6^3$ cells total for 27 nodes per cell). Bandwidth, $bw$, is included in the bottom label for each matrix, as well as the number of nonzeros, $nz$. Of all the orderings in Figure~\ref{fig:ordering_impact_rg}, RCM is by far the smallest bandwidth ($bw=858$). The runner up, with a 30\% wider bandwidth, is raster-ordering.  The four remaining options are aesthetically pleasing, but their nonzero distributions have significantly less structure. 
 
 In similar fashion, the example in Figure~\ref{fig:ordering_impact_cvt} provides the six orderings for $N=4096$ MD-nodes on the unit sphere. Each row has $n=31$ nonzeros, but in this case the fixed-grid resolution in each dimension is $h_n = 10$. Once again the top two orderings by bandwidth are RCM and raster-ordering. 
 
