--- a/latex/stokes_revisited.tex
+++ b/latex/stokes_revisited.tex
@@ -11,4 +11,4 @@
 \begin{pmatrix} 0 \pd{u}{x} & 0 \pd{u}{y} & 0 \pd{u}{z} \\ 0 \pd{v}{x} & 0 \pd{v}{y} & 0 \pd{v}{z} \\ 0 \pd{w}{x} & 0 \pd{w}{y} & 0 \pd{w}{z} \end{pmatrix} + \eta \begin{pmatrix} \pdd{u}{x} & \pd{u}{y \partial x} & \pd{u}{z \partial x} \\ \pd{v}{x \partial y} & \pdd{v}{y} & \pd{v}{z \partial y} \\ \pd{w}{x \partial z} & \pd{w}{y \partial z} & \pdd{w}{z} \end{pmatrix} + Ra T \hat{r} & = \grad{p} \\
 \eta \begin{pmatrix} \pdd{u}{x} & \pd{u}{y \partial x} & \pd{u}{z \partial x} \\ \pd{v}{x \partial y} & \pdd{v}{y} & \pd{v}{z \partial y} \\ \pd{w}{x \partial z} & \pd{w}{y \partial z} & \pdd{w}{z} \end{pmatrix} + Ra T \hat{r} & = \grad{p}
 \end{align}
-The off diagonal blocks are simple to include in code because it is the product $P\cdot \pd{}{x} * P \cdot \pd{}{y}$ (remember they are symmetric so $xy = yx$). Also in the case of the interleaved values we have extra non-zeros bundled together to benefit from cache effects. When $\eta$ is a non-constant function then we have extra work in the assembly to accumulate blocks. Recall that the use of $Q$ arises due to the fact that $div(curl(F)) = 0$, so $Q$ essentially gets the curl of an input vector field and we use the resulting $\curl{F}$ as the manufactured divergence free field. 
+The off diagonal blocks are simple to include in code because it is the product $P\cdot \pd{}{x} * P \cdot \pd{}{y}$ (remember they are symmetric so $xy = yx$). Also in the case of the interleaved values we have extra nonzeros bundled together to benefit from cache effects. When $\eta$ is a non-constant function then we have extra work in the assembly to accumulate blocks. Recall that the use of $Q$ arises due to the fact that $div(curl(F)) = 0$, so $Q$ essentially gets the curl of an input vector field and we use the resulting $\curl{F}$ as the manufactured divergence free field. 
