--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -322,20 +322,21 @@ For the performance of the custom RBF-FD implementation we refer readers to \cit
 \section{ViennaCL Implementation} 
 
 In the interest of boosting performance of RBF-FD beyond 3 GFLOP/sec, work on the custom OpenCL kernels was suspended in favor of leveraging the SpMV built into the ViennaCL library \cite{Rupp2010, Rupp2010a}.  
-The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written in C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level kernels \cite{Rupp2010a}. 
-The API is structured following existing programming and interface conventions from the Boost::uBLAS library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and Boost::uBLAS APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to Boost::uBLAS data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
+
+The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written using C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level kernels \cite{Rupp2010a}. 
+The API is structured following existing programming and interface conventions from the \ttt{Boost::uBLAS} library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and \ttt{Boost::uBLAS} APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to \ttt{Boost::uBLAS} data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
 
 In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Back-end options include OpenCL, CUDA, and OpenMP. Our work focuses solely on the OpenCL back-end.
 
-We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the API whenever possible. Two things were apparent when we started working with ViennaCL: a) the library is incredibly powerful but it was limited to square matrices; and b) there was no support multiple GPUs. Since the library is open source, we joined the project as developers and made a number of contributions to the main codebase that add support for rectangular matrices, a matrix preconditioner, a number of bugfixes, and soon: our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}.
+We have integrated the ViennaCL library into the RBF-FD GPU project (\cite{BolligRBFFDCode}), and attempt to use the Vienna API whenever possible. Two items became apparent once we started working with ViennaCL: a) the library is incredibly powerful but it is limited to square matrices; and b) there is no support for multiple GPUs. Since the library is open source, we joined the project as developers and made a number of contributions to the main codebase that adds support for rectangular matrices, a matrix preconditioner, a number of bugfixes, and in the near future,  our multi-GPU algorithms with overlapping communication and computation presented in Chapter~\ref{chap:multigpu_rbffd}.
 
-As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we note that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc originally leveraged the CUDA-only library, CUSP (\cite{Cusp2012}), to internally offload matrix computations to NVidia GPUs \cite{Minden2010}. However, with the functional portability of OpenCL and the new ViennaCL back-ends, PETSc is now able to transparently target parallel architectures across all vendors. In turn, investigations like \cite{Yokota2010,Yokota2012}, which depend on PETSc, likewise gain that ability. 
+As a testament to the functionality of the ViennaCL library and its utility within the RBF-FD GPU project, we note that the PETSc project (\cite{petsc-web-page}) recently integrated the library into its codebase. PETSc originally leveraged the CUDA-only library, CUSP (\cite{Cusp2012}), to internally offload matrix computations to NVidia GPUs \cite{Minden2010}. However, with the functional portability of OpenCL and the new ViennaCL back-ends, PETSc is now able to transparently target parallel architectures across all vendors. In turn, investigations like \cite{Yokota2010,Yokota2012}, which depend on PETSc, likewise gain this ability. 
 
 ViennaCL supports a number of sparse formats similar to \cite{Bell2009,Cusp2012}. Due to the low operational intensity in the SpMV operation, the best way to boost performance is to increase compression on the sparse matrix. To this end we consider the performance of three ViennaCL formats shown in Figure~\ref{fig:sparse_format}: 
 \begin{itemize} 
-\item \emph{Coordinate Matrix (COO)} -- The sparse matrix is compressed to three arrays of equal length. The first array stores all nonzero weights from the matrix contiguous by row. The second and third arrays store the row and column indices (resp.) for each nonzero element. For a mesh of $N$ nodes and RBF-FD stencil size $n$ this format requires $(3*N*n)$ storage. 
+\item \emph{Coordinate Matrix (COO)} -- The sparse matrix is compressed to three arrays of equal length. The first array stores all nonzero weights from the matrix contiguous by row. The second and third arrays store the row and column indices (resp.) for each nonzero element. For a mesh of $N$ nodes and RBF-FD stencil size $n$ this format requires $(3*N*n)$ storage.  % YOU WILL NOTE THAT THERE ARE PAPERS THAT DISCUSS THE CORRECT FORMAT. ELL
 \item \emph{Compressed Row Storage (CSR)} -- Similar to COO, the matrix is stored in three arrays. All $N*n$ nonzero weights are stored in the first array. In the second array, $N$ integers indicate the offset (into the first array) to get to the first nonzero of each row. Finally, the $N*n$ column indices for each nonzero are stored in the third array. This format requires a total of $(2*(n+1)*N)$ storage.
-\item \emph{ELLPACK (ELL)} -- The matrix is assumed to have exactly $m$ nonzeros per row. Then the matrix is compressed to two arrays, each of size $N*m$, that contain only the matrix nonzeros and the column indices. If a row has less than $m$ nonzeros then zeros are used to pad up to the required number of nonzeros. However, based on the assumption that all RBF-FD stencils will have equal size, we have $m=n$ and the format is a good fit for the problem. ELL requires a total of $(2*N*n)$ storage. 
+\item \emph{ELLPACK (ELL)} -- The matrix is assumed to have exactly $m$ nonzeros per row. Then the matrix is compressed to two arrays, each of size $N*m$, that contain only the matrix nonzeros and the column indices. If a row has less than $m$ nonzeros, then zeros are used to pad up to the required number of nonzeros. However, based on the assumption that all RBF-FD stencils will have equal size, we have $m=n$ and the format is a good fit for the problem. ELL requires a total of $(2*N*n)$ storage. 
 \end{itemize}
 %COO and CSR matrices are convenient for problems that have variable number of nonzeros per row. However, the extra storage means that 
 %, the ELL format is clearly preferred. 
@@ -356,11 +357,12 @@ Performance of the SpMV is measured as
 \begin{align}
 GFLOP/sec = (\ ^{N * n * 2} /_{t_{s}} ) * 10^{-9},
 \end{align}
-where $t_{s}$ is the SpMV execution time given in seconds, and the scale of 2 counts the number of FLOPs (a multiply and add) required per nonzero of the matrix. Variables $N$ and $n$ describe the number of rows and nonzeros per row respectively (equivalently the mesh resolution and stencil size).
+where $t_{s}$ is the SpMV execution time given in seconds, and the factor of 2 counts the number of FLOPs (a multiply and add) required per nonzero of the matrix. The variables $N$ and $n$ describe the number of rows and nonzeros per row respectively (equivalently the mesh resolution and stencil size.)
 
 Benchmarks are provided for both the NVidia M2070 and NVidia K20 GPUs on the Cascade cluster. In each case we consider a range of mesh resolutions up to one million nodes on the unit sphere, and stencil sizes $n=17, 31, 50, 101$. 
 
-We start in Figure~\ref{fig:gflops_cascade_m2070} with the observed GFLOP/sec achieved on the M2070. Unsurprisingly we find that the performance of the CSR format on the GPU is nearly the same GFLOP/sec achieved by our custom GPU kernels in Appendix~\ref{app:keeneland_alltoallv_benchmarks}. However, the performance of the COO format is interesting in that it exceeds the performance of the lower memory CSR format in most cases. For $n=101$ the COO format is approximately 50\% faster than the CSR format. Although this development is interesting, our motivation in the benchmarks is to achieve the best possible performance. For each stencil size the ELL format clearly demonstrates itself as the best with a peak of up to 8 GFLOP/sec in the case of $n=101$ nodes per stencil.
+We start in Figure~\ref{fig:gflops_cascade_m2070} with the observed GFLOP/sec achieved on the M2070. Unsurprisingly we find that the performance of the CSR format on the GPU is nearly the same GFLOP/sec achieved by our custom GPU kernels in Appendix~\ref{app:keeneland_alltoallv_benchmarks}. However, the performance of the COO format is interesting in that it exceeds the performance of the lower memory CSR format in most cases. For $n=101$ the COO format is approximately 50\% faster than the CSR format. Although this development is interesting, our motivation in the benchmarks is to achieve the best possible performance. For each stencil size, the ELL format clearly demonstrates itself as the best with a peak of up to 8 GFLOP/sec in the case of $n=101$ nodes per stencil.
+%GE AND WHAT WAS YOUR (HANDCRAFTED) PERFORMANCE IN THIS CASE? If COO exceeds perfornace of CSR, why is this not interesting? Is ELL FASTER than COO? I thought ELL and CSR would run at similar  speeds. 
 
 \begin{figure} 
 \centering
@@ -395,6 +397,7 @@ We start in Figure~\ref{fig:gflops_cascade_m2070} with the observed GFLOP/sec ac
 \end{figure}
 
 Figure~\ref{fig:gflops_cascade_k20} repeats the benchmarks for Cascade's K20 GPU. In this case, the K20 is expected to perform up to 50\% better than the M2070 due to increased bandwidth. Although an increase is visible for CSR and COO data, the ELL results are disappointingly similar to the M2070 results. The K20 also achieves only up to 8 GFLOP/sec peak for stencil size $n=101$. 
+% WHY IS THIS EVAN? MAKE SOME STATTEMENT IF YOU CAN. 
 
 \begin{figure} 
 \centering
@@ -431,9 +434,10 @@ Figure~\ref{fig:gflops_cascade_k20} repeats the benchmarks for Cascade's K20 GPU
 
 Figures~\ref{fig:ell_gflops_cascade_m2070} and \ref{fig:ell_gflops_cascade_k20} summarize the best achieved GFLOP/sec (in all cases the ELL format) for each stencil size on the M2070 and K20 respectively. The figures show that stencil sizes $n=17$ and $n=31$ on the K20 perform roughly 20\% worse than the M2070. 
 
-In Figures~\ref{fig:ell_speedup_cascade_m2070} and \ref{fig:ell_speedup_cascade_k20} we consider the speedup achieved by each GPU over their respective CPUs  (i.e., Westmere-EP and Sandy-Bridge), which run the Boost::uBLAS CSR format. In \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} our custom kernels achieved at most 4x speedup over the CPU in a setup nearly identical to the M2070 case here. In this case, leveraging the ELL format achieves between 10x and 14x speedup on one million nodes.
+In Figures~\ref{fig:ell_speedup_cascade_m2070} and \ref{fig:ell_speedup_cascade_k20}, we consider the speedup achieved by each GPU over their respective CPUs  (i.e., Westmere-EP and Sandy-Bridge), which run the \ttt{Boost::uBLAS} CSR format. In \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} our custom kernels achieved at most 4x speedup over the CPU in a setup nearly identical to the M2070 case here. In this case, leveraging the ELL format achieves between 10x and 14x speedup on one million nodes. 
+%GE SPEEDUP COMPARED TO WHAT? To the CPUS? How do you know the CPU is optimized? What are the compiler options? Loop unroll? -O3? ...
 
-In the case of the K20 shown in Figure~\ref{fig:ell_speedup_cascade_k20}, the faster Sandy-Bridge architecture closes some of the divide between CPUs and GPUs, but we still maintain 8x to 10x speedup on one million nodes. 
+In the case of the K20 shown in Figure~\ref{fig:ell_speedup_cascade_k20}, the faster Sandy-Bridge architecture closes some of the divide between CPUs and GPUs, but we still maintain 8x to 10x speedup for a one million node mesh.
 
 \begin{figure} 
 \centering
