Fixed small error: \ttt --> \textttt

--- a/latex/gpu_solver.tex
+++ b/latex/gpu_solver.tex
@@ -324,7 +324,7 @@ For the performance of the custom RBF-FD implementation we refer readers to \cit
 In the interest of boosting performance of RBF-FD beyond 3 GFLOP/sec, work on the custom OpenCL kernels was suspended in favor of leveraging the SpMV built into the ViennaCL library \cite{Rupp2010, Rupp2010a}.  
 
 The ViennaCL library advertises itself as an OpenCL library that provides standard data types for linear algebra operations on GPUs and multi-core CPUs \cite{Rupp2010}. The library, written using C++ templates, abstracts the GPU behind an API for both dense and sparse linear algebra, iterative krylov solvers, matrix preconditioners, etc. Auto-tuned OpenCL kernels simplify targeting the GPU and allow developers to focus on prototyping applications rather than optimizing their own low-level kernels \cite{Rupp2010a}. 
-The API is structured following existing programming and interface conventions from the \ttt{Boost::uBLAS} library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and \ttt{Boost::uBLAS} APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to \ttt{Boost::uBLAS} data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
+The API is structured following existing programming and interface conventions from the \texttt{Boost::uBLAS} library, a CPU-only linear algebra library (\cite{BoostSite}). In fact, the ViennaCL and \texttt{Boost::uBLAS} APIs are directly compatible, and many ViennaCL algorithms (e.g., iterative solvers, preconditioners, etc.) can be applied to \texttt{Boost::uBLAS} data structures. Similar interoperability exists between ViennaCL and the EIGEN and MTL libraries. 
 
 In an interesting twist, the most recent version of ViennaCL (v1.4.2) also supports multiple parallel back-ends that allow one to target different parallel architectures with the same API. Back-end options include OpenCL, CUDA, and OpenMP. Our work focuses solely on the OpenCL back-end.
 
@@ -434,7 +434,7 @@ Figure~\ref{fig:gflops_cascade_k20} repeats the benchmarks for Cascade's K20 GPU
 
 Figures~\ref{fig:ell_gflops_cascade_m2070} and \ref{fig:ell_gflops_cascade_k20} summarize the best achieved GFLOP/sec (in all cases the ELL format) for each stencil size on the M2070 and K20 respectively. The figures show that stencil sizes $n=17$ and $n=31$ on the K20 perform roughly 20\% worse than the M2070. 
 
-In Figures~\ref{fig:ell_speedup_cascade_m2070} and \ref{fig:ell_speedup_cascade_k20}, we consider the speedup achieved by each GPU over their respective CPUs  (i.e., Westmere-EP and Sandy-Bridge), which run the \ttt{Boost::uBLAS} CSR format. In \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} our custom kernels achieved at most 4x speedup over the CPU in a setup nearly identical to the M2070 case here. In this case, leveraging the ELL format achieves between 10x and 14x speedup on one million nodes. 
+In Figures~\ref{fig:ell_speedup_cascade_m2070} and \ref{fig:ell_speedup_cascade_k20}, we consider the speedup achieved by each GPU over their respective CPUs  (i.e., Westmere-EP and Sandy-Bridge), which run the \texttt{Boost::uBLAS} CSR format. In \cite{BolligFlyerErlebacher2012} and Appendix~\ref{app:keeneland_alltoallv_benchmarks} our custom kernels achieved at most 4x speedup over the CPU in a setup nearly identical to the M2070 case here. In this case, leveraging the ELL format achieves between 10x and 14x speedup on one million nodes. 
 %GE SPEEDUP COMPARED TO WHAT? To the CPUS? How do you know the CPU is optimized? What are the compiler options? Loop unroll? -O3? ...
 
 In the case of the K20 shown in Figure~\ref{fig:ell_speedup_cascade_k20}, the faster Sandy-Bridge architecture closes some of the divide between CPUs and GPUs, but we still maintain 8x to 10x speedup for a one million nod mesh.
